styles.css
/* ... */
.path-mod-openstudio .openstudio-filter-box div > label {
    display: inline;
}

.openstudio_filter_types_all {
    padding-left: 23px;
}

.openstudio-filter-box div img {
    padding: 2px 5px 0 0px;
    vertical-align: top;
    height: 16px;
}

.openstudio-filter-all {
    margin-top: 12px;
}

.filter-block-select {
    font-size: 0.85714em;
    height: 20px;
    margin: 8px 0px 8px 0px;
    padding: 0;
    width: 140px;
}

.openstudio-filter-box [type="checkbox"],
.openstudio-filter-box [type="radio"] {
    margin-right: 5px;
}

.openstudio-filter-box input[type="radio"] + label,
.openstudio-filter-box input[type="checkbox"] + label {
    padding-left: 0px;
}


.path-mod-openstudio .openstudio-filter-all label {
    padding-left: 125px;
}

.openstudio-filter-header {
    display: block;
    margin: -6px 0 0;
    overflow: hidden;
    padding: 0;
    vertical-align: top;
}

.openstudio-filter-blocks:last-of-type,
.openstudio-filter-types:last-of-type,
.openstudio-filter-user-flags:last-of-type,
.openstudio-filter-status:last-of-type,
.openstudio-filter-from:last-of-type {
    margin-bottom: -5px;
}

.openstudio-filter-mobile {
    display: none;
}


.openstudio-filter-mobile {
    background-color: #ffffff;
    margin: 0 20px 20px;
    padding: 0 15px 0 0;
    line-height: 54px;
}

/** Notifications */

.openstudio-navigation-notification-icon {
    cursor: pointer;
}

.openstudio-nav-primary .notifications .openstudio-notifications-arrow {
    display: none;
}

.openstudio-nav-primary .notifications.open .openstudio-notifications-arrow {
    display: block;
    position: absolute;
    top: -20px;
    left: 223px
}

.openstudio-notifications {
    width: 445px;
    border-bottom-left-radius: 0;
    border-bottom-right-radius: 0;
}

.path-mod-openstudio .openstudio-notifications.dropdown-menu {
    padding: 0;
    top: 62px;
    left: -222px;
}

.openstudio-notifications-heading {
    background-color: #0b55a8;
    color: white;
    font-size: 1.14285em;
    margin: 0;
    border-top-left-radius: 3px;
    border-top-right-radius: 3px;
    line-height: 34px;
    padding-left: 10px;
}

.openstudio-notifications-heading img {
    width: 24px;
    margin-right: 2px;
}

.openstudio-notifications-list {
    margin: 0;
    list-style: none;
    max-height: 560px;
    overflow-y: auto;
    overflow-x: hidden;
}

.openstudio-notification {
    padding: 15px;
    border-bottom: 1px solid #bfe2ef;
}

.openstudio-notification-unread {
    background-color: #e7f4fa;
}

.openstudio-notification .userpicture,
.openstudio-notification-body {
    display: inline-block;
    vertical-align: top;
}

.openstudio-notification .userpicture {
    margin-right: 5px;
}

.openstudio-notification-body {
    width: calc(100% - 58px);
}

.openstudio-notification-body p {
    margin-top: 0;
    margin-bottom: 5px;
    width: 100%;
}

.openstudio-notification-body .openstudio-notification-details {
    font-size: 0.85714em;
}

.openstudio-notification-body .openstudio-notification-details img {
    vertical-align: top;
}

.openstudio-notification-stopbutton {
    float: right;
    border: none;
    padding: 0;
    margin-right: 0;
}

.openstudio-notification-stopbutton:hover,
button.openstudio-notification-stopbutton:focus {
    background-color: transparent;
}

button.openstudio-notification-stopbutton:focus {
    outline: 1px dotted grey;
}

@media (max-width: 1023px) {
    .openstudio-notifications {
        width: 393px;
    }
    .path-mod-openstudio .openstudio-notifications.dropdown-menu {
        left: -290px;
    }
    .openstudio-nav-primary .notifications.open .openstudio-notifications-arrow {
        left: 291px;
    }
}

@media (max-width: 767px) {
    .openstudio-notifications {
        width: 100vw;
    }
    .path-mod-openstudio .openstudio-notifications.dropdown-menu {
        top: 81px;
        left: -323px;
    }
    .openstudio-notifications-heading {
        border-top-left-radius: 0;
        border-top-right-radius: 0;
        padding-left: 10px;
        padding-right: 20px;
    }
    .openstudio-notifications-heading img {
        width: 40px;
    }
    .openstudio-notifications-list {
        max-height: none;
    }
    .openstudio-notification {
        padding: 20px;
    }
    .openstudio-notification-details .smallicon {
        width: 18px;
        height: 18px;
    }
    .openstudio-notification-stopbutton .smallicon {
        width: 24px;
        height: 24px;
    }
    .openstudio-nav-primary .notifications.open .openstudio-notifications-arrow {
        top: -17px;
        left: 335px;
    }
}

@media (max-width: 419px) {
    .path-mod-openstudio .openstudio-notifications.dropdown-menu {
        top: 63px;
        left: -248px;
    }
    .openstudio-nav-primary .notifications.open .openstudio-notifications-arrow {
        left: 252px;
        top: -15px;
    }
}

/**
 * Import feature
 */

.path-mod-openstudio #osep-bottombutton-import img {
    margin-bottom: 3px;
}

.openstudio-import-header {
    margin-top: 27px;
    padding-top: 9px;
    border-top: 1px solid #d4d2d2;
    margin-bottom: 26px;
}
.openstudio-import-header h2 {
    font-family: Arial;
    font-size: 1.57em;
    color: #002158;
    font-weight: bold;
}

.openstudio-import-form label[for="id_importfile"] {
    font-weight: bold;
}

.openstudio-import-form .mform .iconhelp {
    margin-left: 0px;
}

.openstudio-import-form #fitem_id_importcontents {
    margin-top: 40px;
    margin-bottom: 63px;
}

.openstudio-import-form .fp-restrictions {
    display: none;
}

.openstudio-import-error {
    text-align: right;
    color: red;
}

/**
 * End import feature
 */

/**
 * Common dialogue
 */

/* Common dialog header */

.path-mod-openstudio .moodle-dialogue-base .openstudio-dialogue .moodle-dialogue-wrap .moodle-dialogue-hd,
.path-mod-openstudio .moodle-dialogue-base .openstudio-dialogue .moodle-dialogue-wrap .moodle-dialogue-hd.yui3-widget-hd {
    height: 46px;
    padding: 0px;
}
/* ... */

